<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">开心一刻</string>
    <string name="action_settings">设置</string>
    <string name="book_title">开心一刻</string>
    <string name="changeSize">字号:</string>
    <string name="preview">预览</string>
    <string name="settingDialogTitle">设置</string>
    <string name="btnSure">确定</string>
    <string name="btnCancel">取消</string>
    <string name="previewText">\t\t开心一刻--汇集众多笑话，为笑话爱好者量身打造的一款阅读软件.笑笑更年轻。</string>
    <string name="action_exit">退出</string>
    <string name="action_share">分享</string>
    <string name="btn_more">更新</string>
	<string name="action_changeappr">字体大小</string>
	<string name="toRelace">松开更新</string>
	<string name="tab_spec_daily">每日</string>
	<string name="tab_spec_local">本地</string>
	<string name="tab_spec_settings">设置</string>
</resources>